# onnx-issue-example

./: example.py  example_same_len_aux.py  example_working_module.py  fmt  pyproject.toml
