[tool.poetry]
name = "onnx-issue"
version = "0.1.0"
description = ""
authors = ["Rodrigo Corrêa <rcelha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
numpy = "^1.25.2"
onnx = "^1.14.1"
onnxruntime = "^1.15.1"
monkeytype = "^23.3.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.15.0"
ruff = "^0.0.289"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
